--- a/Logistics/App.config
+++ b/Logistics/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="cs" connectionString="server=localhost\\SQLEXPRESS;database=Logistics;Integrated security=SSPI" />
+    <add name="cs" connectionString="server = localhost\SQLEXPRESS;database=Logisticss;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
 </configuration>
