added delete buttons functionality

--- a/Logistics/App.config
+++ b/Logistics/App.config
@@ -3,4 +3,7 @@
   <connectionStrings>
     <add name="cs" connectionString="server = localhost\SQLEXPRESS;database=Logisticss;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
+  <appSettings>
+    <add key="AddInitialDataOnDatabaseCreate" value="true"/>
+  </appSettings>
 </configuration>
